change mongo url'
clear

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb://localhost:27017/EcommerceAPI
+MONGO_URL = mongodb+srv://giangju:giang123@cluster0.1prti0n.mongodb.net/?retryWrites=true&w=majority
 PASS_SEC = 12345;
 JWT_SEC = 12345;
